# elasticsearch-serverless-python

./: .gitignore  .readthedocs.yml  CONTRIBUTING.md  LICENSE  MANIFEST.in  NOTICE  README.md  README.rst  README_TEMPLATE.md  catalog-info.yaml  customize.sh  noxfile.py  pyproject.toml  setup.py
.buildkite/: generatesteps.py  pull-requests.json  rest-tests.yaml  run-tests  teardown-tests
.ci/: Dockerfile  make.sh  run-elasticsearch.sh
.github/: Dockerfile  make.sh
.github/workflows/: tests.yml
docs/: getting-started.MDX  getting-started.mdx  landing-page.MDX  landing-page.mdx  questions-and-assumptions.md
docs/guide/: configuration.asciidoc  connecting.asciidoc  examples.asciidoc  getting-started.asciidoc  helpers.asciidoc  index.asciidoc  installation.asciidoc  integrations.asciidoc  overview.asciidoc  release-notes.asciidoc
docs/sphinx/: api.rst  async.rst  conf.py  exceptions.rst  helpers.rst  index.rst
docs/sphinx/api/: async-search.rst  cat.rst  cluster.rst  connector.rst  elasticsearch.rst  enrich-policies.rst  eql.rst  esql.rst  indices.rst  inference.rst  ingest-pipelines.rst  license.rst  logstash.rst  ml.rst  nodes.rst  query-rules.rst  search-application.rst  security.rst  sql.rst  synonyms.rst  tasks.rst  transforms.rst
elasticsearch_serverless/: __init__.py  _otel.py  _version.py  client.py  serializer.py
elasticsearch_serverless/_async/: helpers.py
elasticsearch_serverless/_async/client/: __init__.py  _base.py  async_search.py  autoscaling.py  cat.py  ccr.py  cluster.py  connector.py  dangling_indices.py  enrich.py  eql.py  esql.py  features.py  fleet.py  graph.py  ilm.py  indices.py  inference.py  ingest.py  license.py  logstash.py  migration.py  ml.py  monitoring.py  nodes.py  query_rules.py  query_ruleset.py  rollup.py  search_application.py  searchable_snapshots.py  security.py  slm.py  snapshot.py  sql.py  ssl.py  synonyms.py  tasks.py  text_structure.py  transform.py  utils.py  (+2 more)
elasticsearch_serverless/_sync/client/: __init__.py  _base.py  async_search.py  autoscaling.py  cat.py  ccr.py  cluster.py  connector.py  dangling_indices.py  enrich.py  eql.py  esql.py  features.py  fleet.py  graph.py  ilm.py  indices.py  inference.py  ingest.py  license.py  logstash.py  migration.py  ml.py  monitoring.py  nodes.py  query_rules.py  query_ruleset.py  rollup.py  search_application.py  searchable_snapshots.py  security.py  slm.py  snapshot.py  sql.py  ssl.py  synonyms.py  tasks.py  text_structure.py  transform.py  utils.py  (+2 more)
elasticsearch_serverless/helpers/: actions.py
test_elasticsearch_serverless/: conftest.py  test_cases.py  test_exceptions.py  test_helpers.py  test_otel.py  test_serializer.py  test_transport.py  utils.py
test_elasticsearch_serverless/test_async/: test_transport.py
test_elasticsearch_serverless/test_async/test_server/: conftest.py  test_clients.py  test_helpers.py  test_mapbox_vector_tile.py  test_rest_api_spec.py
test_elasticsearch_serverless/test_client/: test_cluster.py  test_deprecated_options.py  test_indices.py  test_options.py  test_overrides.py  test_requests_auth.py  test_rewrite_parameters.py  test_serializers.py  test_utils.py
test_elasticsearch_serverless/test_server/: conftest.py  test_clients.py  test_helpers.py  test_mapbox_vector_tile.py  test_otel.py  test_responses.py  test_rest_api_spec.py
test_elasticsearch_serverless/test_types/: aliased_types.py  async_types.py  sync_types.py
utils/: build-dists.py  bump-version.py  run-unasync.py
