[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "elasticsearch-serverless"
version = "0.5.0.20231031"
description = "Python client for Elasticsearch Serverless"
readme = "README.rst"
license = "Apache-2.0"
requires-python = ">=3.9"
authors = [
    { name = "Elastic Client Library Maintainers", email = "client-libs@elastic.co" },
]
maintainers = [
    { name = "Elastic Client Library Maintainers", email = "client-libs@elastic.co" },
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
keywords = [
    "elasticsearch",
    "elastic",
    "kibana",
    "mapping",
    "REST",
    "search",
    "client",
    "index",
]
dependencies = [
    "elastic-transport>=8.4.1,<9",
]

[project.optional-dependencies]
async = ["aiohttp>=3,<4"]
requests = ["requests>=2.4.0, <3.0.0" ]
orjson = ["orjson>=3"]
pyarrow = ["pyarrow>=1"]
dev = [
    "requests>=2, <3",
    "aiohttp",
    "pytest",
    "pytest-cov",
    "pytest-asyncio",
    "coverage",
    "jinja2",
    "python-dateutil",
    "unasync",
    "pyyaml>=5.4",
    "isort",
    "black",
    "twine",
    "build",
    "nox",
    "orjson",
    "numpy",
    "pyarrow",
    "pandas",
    "mapbox-vector-tile",
]
docs = [
    "sphinx-rtd-theme>=1.2.2",
    "sphinx-autodoc-typehints",
    "sphinx==6.2.1",
]

[project.urls]
Documentation = "https://elasticsearch-serverless-python.readthedocs.io"
Homepage = "https://github.com/elastic/elasticsearch-serverless-python"
"Issue Tracker" = "https://github.com/elastic/elasticsearch-serverless-python/issues"
"Source Code" = "https://github.com/elastic/elasticsearch-serverless-python"

[tool.hatch.build.targets.sdist]
include = [
    "/elasticsearch_serverless",
    "/CHANGELOG.md",
    "/CONTRIBUTING.md",
    "/LICENSE",
    "/NOTICE",
    "/README.rst",
    "/setup.cfg",
    "/docs/sphinx",
]

[tool.hatch.build.targets.wheel]
packages = ["elasticsearch_serverless"]

[tool.pytest.ini_options]
junit_family = "legacy"
xfail_strict = true
markers = "otel"

[tool.isort]
profile = "black"

[tool.coverage.report]
exclude_lines = [
    "raise NotImplementedError*",
]

[tool.mypy]
ignore_missing_imports = true
